--- a/css.css
+++ b/css.css
@@ -151,4 +151,20 @@ text-align: center;
     transition: all 0.3s;
 }
 
+#projectLink {
+    font-family: 'Merriweather', serif;
+    font-size: calc(25px + 15 * (100vw / 2560));
+    border-style: solid;
+    border-radius: 20px;
+    padding: 15px;
+    /*text-align: center;*/
+    /*margin: 50px;*/
+    overflow-wrap: break-word;
+    color: #f5f0e1;
+    text-decoration: none;
+}
 
+    #projectLink:hover {
+        color: #ff6e40;
+        transition: all 0.3s;
+    }
