--- a/css.css
+++ b/css.css
@@ -1,7 +1,8 @@
 body {
     margin: 0;
     /*background-image: url(4850037.jpg);*/
-    background-color: #1e3d59;
+    /* background-color: #1e3d59; */
+    background-color: #1a405f;
     font-size: 25px;
     font-weight: normal;
 }
@@ -9,7 +10,7 @@ body {
 #backGround {
     height: auto;
     width: auto;
-    background: #f5f0e1 /*linear-gradient( #f5f0e1, #1e3d59);*/;
+    background: #fcfcfa /*linear-gradient( #f5f0e1, #1e3d59);*/;
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     
@@ -44,7 +45,6 @@ body {
     margin: auto;
     padding: 3%;
     text-decoration: none;
-    font-size: calc(25px + 15 * (100vw / 2560));
     font-weight: 600;
     text-align: center;
     
@@ -103,16 +103,17 @@ body {
 
 #text {
     font-family: 'Merriweather', serif;
-    font-size: calc(25px + 15 * (100vw / 2560));
+    /* font-size: calc(25px + 15 * (100vw / 2560)); */
+    font-size: 1.2;
     width: auto;
     height: auto;
     border-style: solid;
     border-radius: 20px;
     padding: 25px;
-    /*text-align: center;*/
     margin: 50px;
     overflow-wrap: break-word;
-    color: #f5f0e1;
+    color: #fcfcfa;
+    line-height: 1.5;
 }
 
 @media (min-width: 767px) and (max-width: 1000px) {
@@ -130,12 +131,11 @@ text-align: center;
 
 #ss {
     text-decoration: none;
-    color: black;
     font-family: 'Merriweather', serif;
-    color: #1e3d59;
+    color: #1a405f;
     margin: 3%;
     border-radius: 20px;
-    font-size: calc(25px + 15 * (100vw / 2560));
+    font-size: calc(20px + 15 * (100vw / 2560));
     font-weight: 600;
     text-align: center;
 }
@@ -146,25 +146,22 @@ text-align: center;
     }
 }
 
-#ss:hover {
-    color: #ff6e40;
+#ss:hover, #projectLink:hover {
+    color: #f55449;
     transition: all 0.3s;
 }
 
 #projectLink {
     font-family: 'Merriweather', serif;
-    font-size: calc(25px + 15 * (100vw / 2560));
+    font-size: 1.5rem;
     border-style: solid;
     border-radius: 20px;
     padding: 15px;
     /*text-align: center;*/
     /*margin: 50px;*/
     overflow-wrap: break-word;
-    color: #f5f0e1;
+    color: #fcfcfa;
     text-decoration: none;
 }
 
-    #projectLink:hover {
-        color: #ff6e40;
-        transition: all 0.3s;
-    }
+  
